--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
-KERNEL_SOURCE=https://github.com/Diva-Room/Miku_kernel_xiaomi_wayne
-KERNEL_SOURCE_BRANCH=TDA
-KERNEL_CONFIG=vendor/wayne_defconfig
-KERNEL_IMAGE_NAME=Image.gz-dtb
+KERNEL_SOURCE=https://github.com/PixelExperience-Devices/kernel_google_bluecross
+KERNEL_SOURCE_BRANCH=thirteen-plus
+KERNEL_CONFIG=vendor/ecool_defconfig
+KERNEL_IMAGE_NAME=Image.gz
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
 
