Ecool Pixel blueline PixelExperience thirteen-plus update fix

--- a/config.env
+++ b/config.env
@@ -40,4 +40,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=true
-SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
+SOURCE_BOOT_IMAGE=https://get.pixelexperience.org/changelog/blueline/PixelExperience_Plus_blueline-13.0-20230504-2233-OFFICIAL.img
