Ecool Pixel blueline PixelExperience thirteen-plus update fix

--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 KERNEL_SOURCE=https://github.com/PixelExperience-Devices/kernel_google_bluecross
 KERNEL_SOURCE_BRANCH=thirteen-plus
-KERNEL_CONFIG=configs/b1c1_defconfig
+KERNEL_CONFIG=vendor/sdm845_defconfig
 KERNEL_IMAGE_NAME=Image.gz
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
@@ -40,4 +40,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=true
-SOURCE_BOOT_IMAGE=https://get.pixelexperience.org/changelog/blueline/PixelExperience_Plus_blueline-13.0-20230504-2233-OFFICIAL.img
+SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/jygzyc/KernelSU_action/main/boot/boot.img
